# sdplay

./: .gitignore  CMakeLists.txt  README.md  TODO-LIST.md
doc/: protocol.md
include/: RDTAPIs.h
include/P2PCam/: AVIOCTRLDEFs.h
src/: dbg.h  public.h  sdplay.c  sdplay.h  transfer.c  transfer.h
tests/: CMakeLists.txt  test_sdplay.c  traversal_by_index.c  traversal_dir.c  traversal_readline.c
