if( DEBUG )
    add_definitions( "-Wall -g" )
endif()
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../src )
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../include )
if (APPLE)
    link_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../libs/mac )
endif()
add_executable(traversal_dir traversal_dir.c)
add_executable(traversal_by_index traversal_by_index.c)
add_executable(traversal_readline traversal_readline.c)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../src DIR_SRCS)
list(APPEND DIR_SRCS test_sdplay.c)
add_executable( tests ${DIR_SRCS})
if (APPLE)
    target_link_libraries( tests pthread IOTCAPIs_ALL  )
endif()
